=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.24_01-dev

fix $r->read() so it will not block if all data has already been read
and so that Apache will not hang during ap_discard_request_body() on
error or redirect after all data has been read

fix for Makefile.PL ADD_MODULE=src/module/foo/libfoo.a
[Nelson Oliveira <NOliveira@extend.com>]

added Apache::user method in preparation for 2.0, now that `user' hangs
off of the request_rec rather than request_rec->connection in Apache 2.0

disable r->proxyreq checking unless PerlTransHandler is enabled and
configured

fix 'make tar_Apache' [Jesse Erlbaum <jesse@VM.COM>]

fix for Perl{Module,Require} in .htaccess,
thanks to Will Trillich and Andrew Gideon for the spot

static+apaci fixes for aix [Jens-Uwe Mager <jum@helios.de>]

fix bug in Perl{Set,Add}Var so $r->dir_config->get('key') sees the
same values as $r->dir_config('key'), thanks to Geoffrey Young for the spot

PerlAddVar is now an ITERATE2 directive rather than TAKE2

added Apache::Server::error_fname method

eg/makepl_args.mod_perl updated
[Neil Conway <nconway@klamath.dyndns.org>]

'make test' config fixes for mod_ssl
[David Mitchell <davem@fdgroup.co.uk>, Mark Murphy <mark@opus.pass.wayne.edu>,
Stephen Schaefer <stephen@networks.com>]

plug leak in DIR_MERGE, thanks to Matt Sergeant for the spot

fixes to run and pass 'make test' on ActivePerl [Randy Kobes, Gerald Richter]

Makefile.PL:post_initialize fix for win32, thanks to john sterling for 
the spot

fixes for ActivePerl [Gurusamy Sarathy <gsar@ActiveState.com>]

change apaci/Makefile.tmpl and src/modules/perl/Makefile so Perl's
include path comes before /usr/local/include, e.g. to make sure Perl's 
patchlevel.h is used, thanks to Ryan Morgan for the spot

avoid duplicate buffer copy in {read,get}_client_block by reading
directly into Perl's SV buffer

modules/request test fix